wykonano funkcjonalność strony:

--- a/src/main.scss
+++ b/src/main.scss
@@ -13,4 +13,6 @@
 
 @import "./scss/_mainstructure.scss";
 @import "./scss/_mainview.scss";
+@import "./scss/_projekty.scss";
+@import "./scss/_kontakt.scss";
 
