--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -2,7 +2,26 @@
   margin-left: 2rem;
   margin-right: 1rem;
   &:hover {
+    cursor: pointer;
     color: $colorheaderselected;
     transition-duration: 0.3s;
+  }
+}
+
+.logo_btn {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.moreless_btn {
+  margin: 2px;
+  width: 15rem;
+  background-color: white;
+  border-radius: 4px;
+  padding: 3px;
+  &:hover {
+    box-shadow: inset 1px 1px 2px 2px rgba(0,0,0,0.1);
+    cursor: pointer;
   }
 }
