--- a/src/scss/_mainview.scss
+++ b/src/scss/_mainview.scss
@@ -31,6 +31,7 @@
     display: block;
   }
   &:hover {
+    cursor: pointer;
     background-color: rgb(255, 255, 255);
     transition-duration: 0.5s;
   }
