--- a/src/scss/_mainstructure.scss
+++ b/src/scss/_mainstructure.scss
@@ -2,6 +2,13 @@ body {
   background-color: $backgroundcolor;
 }
 
+li {
+  margin: 2rem 0 1rem 0;
+  list-style-position: outside;
+  text-align: justify;
+  line-height: 2.3rem;
+}
+
 .main_structure {
   width: 100vw;
   height: 100vh;
@@ -62,5 +69,5 @@ body {
 .pracownia_section {
   margin-bottom: 15px;
   text-align: justify;
-
 }
+
