--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -141,6 +141,13 @@ body {
   background-color: rgb(248, 248, 248);
 }
 
+li {
+  margin: 2rem 0 1rem 0;
+  list-style-position: outside;
+  text-align: justify;
+  line-height: 2.3rem;
+}
+
 .main_structure {
   width: 100vw;
   height: 100vh;
@@ -324,6 +331,10 @@ body {
 
 .txtsection_akaptit {
   margin: 0.5rem 0 0.5rem 2rem;
+}
+
+.txtsection_odstep {
+  margin: 1rem 0 0.5rem 0;
 }
 
 .kontakt_conteiner {
