--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -16,6 +16,8 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   font-size: 100%;
   font-family: inherit;
   vertical-align: baseline;
+  text-decoration: none;
+
 }
 /* remember to define focus styles! */
 :focus {
