--- a/src/scss/_projekty.scss
+++ b/src/scss/_projekty.scss
@@ -5,6 +5,11 @@
 
 .paddingtop {
   padding-top: 12rem;
+
+}
+
+.paddingtop2 {
+  padding-top: 12rem;
     height: auto;
 }
 
@@ -40,7 +45,7 @@
   &:hover {
     transition-duration: 0.5s;
     cursor: pointer;
-    opacity: 0.6;
+    opacity: 0.85;
   }
 }
 
