--- a/src/scss/_projekt.scss
+++ b/src/scss/_projekt.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 
   width: 89rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 6rem);
   margin-inline: auto;
   padding-top: 12rem;
 
@@ -16,8 +16,7 @@
   box-sizing: border-box;
   display: flex;
   padding-top: 2rem;
-
-  min-height: 35rem;
+  //min-height: 35rem;
 }
 .prj_main_img {
   width: 100%;
