--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -11,9 +11,17 @@
   &:visited {
     color: $backgroundcolor;
   }
+  @media screen and (max-width: 950px) {
+    display: inline-block;
+
+    height: 2.5rem;
+    margin-left: 0;
+    width: 90%;
+      }
 }
 
 .logo_btn {
+
   &:hover {
     cursor: pointer;
   }
@@ -23,11 +31,13 @@
 
   margin: 2px;
   width: 15rem;
-  background-color: white;
-  border-radius: 4px;
-  padding: 3px;
+  border: 0;
+  background-color: lightgrey;
+
+  padding: 5px;
   &:hover {
     box-shadow: inset 1px 1px 2px 2px rgba(0,0,0,0.1);
     cursor: pointer;
   }
+
 }
