--- a/src/scss/_projekty.scss
+++ b/src/scss/_projekty.scss
@@ -5,12 +5,17 @@
 
 .paddingtop {
   padding-top: 12rem;
-
+  @include rwd {
+    padding-top: 24rem;}
 }
+
+
 
 .paddingtop2 {
   padding-top: 12rem;
     height: auto;
+  @include rwd {
+    padding-top: 24rem;}
 }
 
 .projekt_box {
@@ -50,10 +55,11 @@
 }
 
 .projekt_opis {
+  @include mainfont;
   box-sizing: border-box;
   padding: 1rem;
   font-size: 3.5rem;
-  font-weight: 400;
+  font-weight: 200;
   text-align: center;
 }
 
