poprawiono zakładkę nagrody oraz pracownia

--- a/src/scss/_rwd.scss
+++ b/src/scss/_rwd.scss
@@ -40,3 +40,22 @@
     height: auto;
   }
 }
+
+.paddingtop {
+  padding-top: 12rem;
+  @include rwd {
+    padding-top: 24rem;
+    height: auto;
+  }
+
+}
+
+
+
+.paddingtop2 {
+  padding-top: 12rem;
+  height: auto;
+  @include rwd {
+    padding-top: 24rem;
+  }
+}
