--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 
 @import "mainstructure";
 @import "mainview";
+@import "pracownia";
 @import "projekty";
 @import "kontakt";
 @import "projekt";
