--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -45,6 +45,17 @@ h4 {
   font-size: 2rem;
 }
 
+.nagrody_fnt_name li{
+  @include mainfont;
+  color: #707070;
+  font-size: 2rem;
+  @include rwd {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    margin-top: 0.1rem;
+  }
+}
+
 .kontakt_main_font {
   @include mainfont;
   font-size: 1.6rem;
