--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -87,6 +87,26 @@ blockquote, q {
   }
 }
 
+.paddingtop {
+  padding-top: 12rem;
+}
+@media screen and (max-width: 950px) {
+  .paddingtop {
+    padding-top: 24rem;
+    height: auto;
+  }
+}
+
+.paddingtop2 {
+  padding-top: 12rem;
+  height: auto;
+}
+@media screen and (max-width: 950px) {
+  .paddingtop2 {
+    padding-top: 24rem;
+  }
+}
+
 .menufont {
   font-family: "Lexend", sans-serif;
 }
@@ -145,6 +165,23 @@ h4:visited {
 }
 .kontakt_fnt_name:visited {
   color: rgb(248, 248, 248);
+}
+
+.nagrody_fnt_name li {
+  font-family: "Lexend", sans-serif;
+  color: rgb(36, 36, 36);
+  color: #707070;
+  font-size: 2rem;
+}
+.nagrody_fnt_name li:visited {
+  color: rgb(248, 248, 248);
+}
+@media screen and (max-width: 950px) {
+  .nagrody_fnt_name li {
+    font-size: 1.2rem;
+    line-height: 1.6rem;
+    margin-top: 0.1rem;
+  }
 }
 
 .kontakt_main_font {
@@ -299,11 +336,6 @@ li {
   }
 }
 
-.pracownia_section {
-  margin-bottom: 15px;
-  text-align: justify;
-}
-
 .mainview_header {
   width: 100vw;
   height: 100vh;
@@ -402,6 +434,39 @@ li {
   }
 }
 
+.pracownia_box {
+  display: flex;
+}
+@media screen and (max-width: 950px) {
+  .pracownia_box {
+    width: 100%;
+    display: block;
+    text-align: center;
+  }
+}
+
+.pracownia_img {
+  box-sizing: border-box;
+  width: 16.5rem;
+  padding-right: 1rem;
+}
+
+.pracownia_img_mobile {
+  box-sizing: border-box;
+  width: 70%;
+  margin-bottom: 1.5rem;
+}
+
+.pracownia_section p {
+  margin-bottom: 15px;
+  text-align: justify;
+}
+
+.pracownia_section p:last-child {
+  margin-bottom: 0;
+  text-align: justify;
+}
+
 .projekty_header {
   border-bottom: 1px solid darkgrey;
   margin-bottom: 2rem;
@@ -412,6 +477,7 @@ li {
 }
 @media screen and (max-width: 950px) {
   .paddingtop {
+    height: auto;
     padding-top: 24rem;
   }
 }
