poprawiono skalowanie zdjęć w sekcji projekty i inne mniejsze niedociągnięcia

--- a/src/scss/_kontakt.scss
+++ b/src/scss/_kontakt.scss
@@ -22,6 +22,10 @@
   justify-content: space-around;
   @include rwd {
     margin-top: 22rem;}
+  @media screen and (max-width: 495px) {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
 
 .kontakt_header {
@@ -34,5 +38,6 @@
 }
 
 .kontakt_right_column {
-
+  @media screen and (max-width: 495px) {
+    padding-left: 1rem;}
 }
