--- a/src/scss/_projekty.scss
+++ b/src/scss/_projekty.scss
@@ -22,8 +22,9 @@
 .projekt_box {
   position: relative;
   box-sizing: border-box;
-  width: 80rem;
-  height: 40rem;
+  width: 100%;
+  height: auto;
+  max-height: 40rem;
   overflow: clip;
   border: 0 solid darkgrey;
   background-color: #ffffff;
