--- a/src/scss/_pracownia.scss
+++ b/src/scss/_pracownia.scss
@@ -3,21 +3,27 @@
   display: flex;
   @include rwd {
     width: 100%;
-    display: block;
-    text-align: center;
+    //display: block;
+    //text-align: center;
+    overflow: auto;
   }
 }
 .pracownia_img {
   box-sizing: border-box;
   width: 16.5rem;
-  padding-right: 1rem;
+  padding-left: 1rem;
+
+
 
 }
 
 .pracownia_img_mobile {
   box-sizing: border-box;
-  width: 70%;
+  width: 30vw;
+  height: 30vw;
   margin-bottom: 1.5rem;
+  float: left;
+  margin-right: 1.5rem;
 }
 .pracownia_column {
   //border: 1px solid blue;
